fix profile pic

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="profile-box">
-    <img src="/assets/images/profile.jpg" alt="Me" class="profile-pic"/>
+    <img src="assets/images/profile.jpg" alt="Me" class="profile-pic"/>
     <div class="profile-text-bg"></div>
     <div class="profile-text">
         <h1>Patrick Woodcock<span>Full stack web developer</span></h1>
