--- a/index.html
+++ b/index.html
@@ -1,43 +1,105 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Patrick Woodcock - full stack web developer</title>
-<meta name="viewport" content="width=device-width">
-<link rel="stylesheet" type="text/css" href="assets/css/patrick-tech.css">
+    <title>Patrick Woodcock - full stack web developer</title>
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="assets/css/patrick-tech.css">
 </head>
+
 <body>
-<div class="profile-box">
-    <img src="assets/images/profile.jpg" alt="Me" class="profile-pic"/>
-    <div class="profile-text-bg"></div>
-    <div class="profile-text">
-        <h1>Patrick Woodcock<span>Full stack web developer</span></h1>
-        
-        <p>Hi! I'm a full stack freelance web developer working in Bristol with 10 years experience.</p>
-        <p>Email: <script type="text/javascript">
+    <div class="site-wrap">
+        <div class="profile-box">
+            <img src="assets/images/profile.jpg" alt="Me" class="profile-pic" />
+            <div class="profile-text-bg"></div>
+            <div class="profile-text">
+                <h1>Patrick Woodcock<span>Full stack web developer</span></h1>
+
+                <p>Hi! I'm a full stack freelance web developer working in Bristol with 10 years experience.</p>
+                <h3>Skills:</h3>
+                <h4 class="skill-heading">Content management systems</h4>
+                <ul class="skill-list">
+                    <li class="skill-item"><a class="skill-name" href="http://expressionengine.com">ExpressionEngine</a>
+                        <progress class="skill-progress" accesskey="" value="95" max="100" />
+                    </li>
+                    <li class="skill-item"><a class="skill-name" href="https://wordpress.org/">Wordpress</a>
+                        <progress class="skill-progress" accesskey="" value="90" max="100" />
+                    </li>
+                </ul>
+                <h4 class="skill-heading">Frontend</h4>
+                <ul class="skill-list">
+                    <li class="skill-item"><a class="skill-name" href="https://developer.mozilla.org/kab/docs/Web/CSS">HTML/CSS/SASS</a>
+                        <progress class="skill-progress" accesskey="" value="95" max="100" />
+                    </li>
+                    <li class="skill-item"><a class="skill-name" href="https://developer.mozilla.org/bm/docs/Web/JavaScript">JavaScript</a>
+                        <progress class="skill-progress" accesskey="" value="90" max="100" />
+                    </li>
+                    <li class="skill-item"><a class="skill-name" href="https://facebook.github.io/react-native/">React.JS</a>
+                        <progress class="skill-progress" accesskey="" value="75" max="100" />
+                    </li>
+                    <li class="skill-item"><a class="skill-name" href="https://vuejs.org/">Vue.JS</a>
+                        <progress class="skill-progress" accesskey="" value="65" max="100" />
+                    </li>
+                </ul>
+                <h4 class="skill-heading">Backend</h4>
+                <ul class="skill-list">
+                    <li class="skill-item"><a class="skill-name" href="http://www.php.net/">PHP/LAMP stack</a>
+                        <progress class="skill-progress" accesskey="" value="92" max="100" />
+                    </li>
+
+                    <li class="skill-item"><a class="skill-name" href="https://nodejs.org/en/">Node.JS</a>
+                        <progress class="skill-progress" accesskey="" value="90" max="100" />
+                    </li>
+                    <li class="skill-item"><a class="skill-name" href="https://www.mysql.com/">MySQL & Postgres</a>
+                        <progress class="skill-progress" accesskey="" value="85" max="100" />
+                    </li>
+                    <li class="skill-item"><a href="#" class="skill-name">ASP.NET</a>
+                        <progress class="skill-progress" accesskey="" value="40" max="100" />
+                    </li>
+                </ul>
+                <h4 class="skill-heading">Still learning</h4>
+                <ul class="skill-list">
+
+                    <li class="skill-item"><a href="#" class="skill-name">C++</a>
+                        <progress class="skill-progress" accesskey="" value="30" max="100" />
+                    </li>
+                    <li class="skill-item"><a href="#" class="skill-name">React Native</a>
+                        <progress class="skill-progress" accesskey="" value="25" max="100" />
+                    </li>
+                    <li class="skill-item"><a href="#" class="skill-name">Java</a>
+                        <progress class="skill-progress" accesskey="" value="25" max="100" />
+                    </li>
+                    <li class="skill-item"><a href="#" class="skill-name">Android SDK</a>
+                        <progress class="skill-progress" accesskey="" value="25" max="100" />
+                    </li>
+                </ul>
+                <p>Email:
+                    <script type="text/javascript">
             //<![CDATA[
-            <!--
-            var x="function f(x){var i,o=\"\",l=x.length;for(i=l-1;i>=0;i--) {try{o+=x.c" +
-            "harAt(i);}catch(e){}}return o;}f(\")\\\"function f(x,y){var i,o=\\\"\\\\\\\""+
-            "\\\\,l=x.length;for(i=0;i<l;i++){if(i==102)y+=i;y%=127;o+=String.fromCharCo" +
-            "de(x.charCodeAt(i)^(y++));}return o;}f(\\\"\\\\\\\\\\\\002\\\\\\\\010\\\\\\" +
-            "\\013\\\\\\\\034\\\\\\\\007\\\\\\\\016\\\\\\\\002\\\\\\\\031@\\\\\\\\030\\\\"+
-            "\\\\002\\\\\\\\030\\\\\\\\006\\\\\\\\026\\\\\\\\030\\\\\\\\033^UD\\\\\\\\03" +
-            "0Z\\\\\\\\023\\\\\\\\016\\\\\\\\030\\\\\\\\030=] neljsg3zjx\\\\\\\\177gl{Qb" +
-            "r`g\\\\\\\\177tsn4oy~vC\\\\\\\\002\\\\\\\\001VJPIC\\\\\\\\032t\\\\\\\\013v\\"+
-            "\\\\\\t\\\\\\\\022]O[BXQXtEWCJPYPK\\\\\\\\023JZ#)~l%{dnsyq\\\"\\\\,102)\\\"" +
-            "(f};)lo,0(rtsbus.o nruter};)i(tArahc.x=+o{)--i;0=>i;1-l=i(rof}}{)e(hctac};l" +
-            "=+l;x=+x{yrt{)98=!)31/l(tAedoCrahc.x(elihw;lo=l,htgnel.x=lo,\\\"\\\"=o,i ra" +
-            "v{)x(f noitcnuf\")"                                                          ;
-            while(x=eval(x));
+            < !--
+            var x = "function f(x){var i,o=\"\",l=x.length;for(i=l-1;i>=0;i--) {try{o+=x.c" +
+                            "harAt(i);}catch(e){}}return o;}f(\")\\\"function f(x,y){var i,o=\\\"\\\\\\\"" +
+                            "\\\\,l=x.length;for(i=0;i<l;i++){if(i==102)y+=i;y%=127;o+=String.fromCharCo" +
+                            "de(x.charCodeAt(i)^(y++));}return o;}f(\\\"\\\\\\\\\\\\002\\\\\\\\010\\\\\\" +
+                            "\\013\\\\\\\\034\\\\\\\\007\\\\\\\\016\\\\\\\\002\\\\\\\\031@\\\\\\\\030\\\\" +
+                            "\\\\002\\\\\\\\030\\\\\\\\006\\\\\\\\026\\\\\\\\030\\\\\\\\033^UD\\\\\\\\03" +
+                            "0Z\\\\\\\\023\\\\\\\\016\\\\\\\\030\\\\\\\\030=] neljsg3zjx\\\\\\\\177gl{Qb" +
+                            "r`g\\\\\\\\177tsn4oy~vC\\\\\\\\002\\\\\\\\001VJPIC\\\\\\\\032t\\\\\\\\013v\\" +
+                            "\\\\\\t\\\\\\\\022]O[BXQXtEWCJPYPK\\\\\\\\023JZ#)~l%{dnsyq\\\"\\\\,102)\\\"" +
+                            "(f};)lo,0(rtsbus.o nruter};)i(tArahc.x=+o{)--i;0=>i;1-l=i(rof}}{)e(hctac};l" +
+                            "=+l;x=+x{yrt{)98=!)31/l(tAedoCrahc.x(elihw;lo=l,htgnel.x=lo,\\\"\\\"=o,i ra" +
+                            "v{)x(f noitcnuf\")";
+                        while (x = eval(x));
             //-->
             //]]>
-            </script>
-        </p>
-        <p>Twitter: <a href="https://twitter.com/patrickwtech">@patrickwtech</a></p>
-        <p>Github: <a href="https://github.com/Patrick64">Patrick64</a></p>
-        </div>
+                    </script>
+                </p>
+                <p>Twitter: <a href="https://twitter.com/patrickwtech">@patrickwtech</a></p>
+                <p>Github: <a href="https://github.com/Patrick64">Patrick64</a></p>
+            </div>
 
-</div>
+        </div>
+    </div>
 </body>
 
 </html>
