add version to css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Patrick Woodcock - full stack web developer</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="assets/css/patrick-tech.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/patrick-tech.css?v=2">
 </head>
 
 <body>
