update bar graphs

--- a/index.html
+++ b/index.html
@@ -17,62 +17,75 @@
 
                 <p>Hi! I'm a full stack freelance web developer working in Bristol with 10 years experience.</p>
                 <h3 class="subheading">Skills:</h3>
-                <h4 class="skill-heading">Content management systems</h4>
-                <ul class="skill-list">
-                    <li class="skill-item"><a class="skill-name" href="http://expressionengine.com">ExpressionEngine</a>
-                        <progress class="skill-progress" accesskey="" value="95" max="100" />
-                    </li>
-                    <li class="skill-item"><a class="skill-name" href="https://wordpress.org/">Wordpress</a>
-                        <progress class="skill-progress" accesskey="" value="90" max="100" />
-                    </li>
-                </ul>
+                
                 <h4 class="skill-heading">Frontend</h4>
                 <ul class="skill-list">
-                    <li class="skill-item"><a class="skill-name" href="https://developer.mozilla.org/kab/docs/Web/CSS">HTML/CSS/SASS</a>
-                        <progress class="skill-progress" accesskey="" value="95" max="100" />
+                    <li class="skill-item"><a class="skill-name" href="https://developer.mozilla.org/kab/docs/Web/CSS">HTML/CSS/JS <small>10+ years</small></a>
+                        <progress class="skill-progress" accesskey="" value="10" max="10" />
                     </li>
-                    <li class="skill-item"><a class="skill-name" href="https://developer.mozilla.org/bm/docs/Web/JavaScript">JavaScript</a>
-                        <progress class="skill-progress" accesskey="" value="90" max="100" />
+                    <li class="skill-item"><a class="skill-name" href="https://developer.mozilla.org/bm/docs/Web/JavaScript">jQuery <small>10+ years</small></a>
+                        <progress class="skill-progress" accesskey="" value="10" max="10" />
                     </li>
-                    <li class="skill-item"><a class="skill-name" href="https://facebook.github.io/react-native/">React.JS</a>
-                        <progress class="skill-progress" accesskey="" value="75" max="100" />
+                    <li class="skill-item"><span class="skill-name" >Typescript <small>2.5 years</small></span>
+                        <progress class="skill-progress" accesskey="" value="2.5" max="10" />
                     </li>
-                    <li class="skill-item"><a class="skill-name" href="https://vuejs.org/">Vue.JS</a>
-                        <progress class="skill-progress" accesskey="" value="65" max="100" />
+                    <li class="skill-item"><a class="skill-name" href="https://vuejs.org/">Vue.JS <small>2.5 years</small></a>
+                        <progress class="skill-progress" accesskey="" value="2.5" max="10" />
+                    </li>
+                    <li class="skill-item"><span class="skill-name">React <small>2 years</small></span>
+                        <progress class="skill-progress" accesskey="" value="2" max="10" />
+                    </li>
+                    <li class="skill-item"><span class="skill-name">React Native <small>3 months</small></span>
+                        <progress class="skill-progress" accesskey="" value=".5" max="10" />
                     </li>
                 </ul>
-                <h4 class="skill-heading">Backend</h4>
-                <ul class="skill-list">
-                    <li class="skill-item"><a class="skill-name" href="http://www.php.net/">PHP/LAMP stack</a>
-                        <progress class="skill-progress" accesskey="" value="92" max="100" />
-                    </li>
 
-                    <li class="skill-item"><a class="skill-name" href="https://nodejs.org/en/">Node.JS</a>
-                        <progress class="skill-progress" accesskey="" value="90" max="100" />
-                    </li>
-                    <li class="skill-item"><a class="skill-name" href="https://www.mysql.com/">MySQL & Postgres</a>
-                        <progress class="skill-progress" accesskey="" value="85" max="100" />
-                    </li>
-                    <li class="skill-item"><a href="#" class="skill-name">ASP.NET</a>
-                        <progress class="skill-progress" accesskey="" value="40" max="100" />
-                    </li>
-                </ul>
-                <h4 class="skill-heading">Still learning</h4>
+                <h4 class="skill-heading">Backend / CMS</h4>
                 <ul class="skill-list">
-
-                    <li class="skill-item"><a href="#" class="skill-name">C++</a>
-                        <progress class="skill-progress" accesskey="" value="30" max="100" />
+                    <li class="skill-item"><span class="skill-name">PHP <small>10+ years</small></span>
+                        <progress class="skill-progress" accesskey="" value="10" max="10" />
                     </li>
-                    <li class="skill-item"><a href="#" class="skill-name">React Native</a>
-                        <progress class="skill-progress" accesskey="" value="25" max="100" />
+                    <li class="skill-item"><a class="skill-name" href="http://expressionengine.com">ExpressionEngine <small>9 years</small></a>
+                        <progress class="skill-progress" accesskey="" value="9" max="10" />
                     </li>
-                    <li class="skill-item"><a href="#" class="skill-name">Java</a>
-                        <progress class="skill-progress" accesskey="" value="25" max="100" />
+                    <li class="skill-item"><span class="skill-name">Wordpress <small>7 years</small></span>
+                        <progress class="skill-progress" accesskey="" value="7" max="10" />
                     </li>
-                    <li class="skill-item"><a href="#" class="skill-name">Android SDK</a>
-                        <progress class="skill-progress" accesskey="" value="25" max="100" />
+                    <li class="skill-item"><span class="skill-name" >ASP.NET <small>4 years</small></span>
+                        <progress class="skill-progress" accesskey="" value="4" max="10" />
                     </li>
+                    <li class="skill-item"><span class="skill-name">Python/Django <small>2 years</small></span>
+                        <progress class="skill-progress" accesskey="" value="2" max="10" />
+                    </li>
+                    <li class="skill-item"><span class="skill-name">Umbraco <small>2 years</small></span>
+                        <progress class="skill-progress" accesskey="" value="2" max="10" />
+                    </li>
+                    <li class="skill-item"><span class="skill-name">C# <small>6 months</small></span>
+                        <progress class="skill-progress" accesskey="" value=".5" max="10" />
+                    </li>
+                    <li class="skill-item"></li>
                 </ul>
+
+                <h4 class="skill-heading">Data / Other</h4>
+                <ul class="skill-list">
+                    <li class="skill-item"><span class="skill-name">Git <small>10 years</small></span>
+                        <progress class="skill-progress" accesskey="" value="10" max="10" />
+                    </li>
+                    <li class="skill-item"><span class="skill-name">MySQL <small>9 years</small></span>
+                        <progress class="skill-progress" accesskey="" value="9" max="10" />
+                    </li>
+                    <li class="skill-item"><span class="skill-name">Postgresql <small>2 years</small></span>
+                        <progress class="skill-progress" accesskey="" value="2" max="10" />
+                    </li>
+                    <li class="skill-item"><span class="skill-name">ElasticSearch <small>1 year</small></span>
+                        <progress class="skill-progress" accesskey="" value="1" max="10" />
+                    </li>
+                    <li class="skill-item"><span class="skill-name">AWS <small>1 year</small></span>
+                        <progress class="skill-progress" accesskey="" value="1" max="10" />
+                    </li>
+                    <li class="skill-item"></li>
+                </ul>
+                
 
             </div>
             <div class="profile-bottom">
